--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -11,6 +11,20 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
+
+     @media only screen and (max-width: 1280px) {
+    .w-slider {
+        height: 233px !important;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    .w-slider {
+        height: 298px !important;
+    }
+}
+
+.w-slider {height: 265px;}
     .table-fill {
   background: white;
   border-radius:3px;
@@ -135,8 +149,8 @@ td.text-right {
         <div>
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
-          <div class="slide-1 w-slide"></div>
-          <div class="slide-5 w-slide">
+          <div class="slide-2 w-slide"></div>
+          <div class="slide-3 w-slide">
             <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
               
             </a>
