--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -14,6 +14,20 @@
 #list3 { }
 #list3 ul { list-style-image: url("../arrow-right.svg"); color:#000; font-size:16px; }
 #list3 ul li { line-height:30px; }
+
+@media only screen and (max-width: 1280px) {
+    .w-slider {
+        height: 233px !important;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    .w-slider {
+        height: 298px !important;
+    }
+}
+
+.w-slider {height: 265px;}
     </style>
 <%end%> 
 
@@ -32,8 +46,8 @@
 
               <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
-          <div class="slide-1 w-slide"></div>
-          <div class="slide-5 w-slide">
+          <div class="slide-2 w-slide"></div>
+          <div class="slide-3 w-slide">
             <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
               
             </a>
