track details change

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,7 +85,7 @@
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    /*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);*/
 }
 
 .container {
@@ -101,7 +101,7 @@
 }
 
 .card-new:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  /*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);*/
 }
 
 
@@ -114,7 +114,7 @@
 }
 
 .card-track:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  /*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);*/
 }
 
 
@@ -126,7 +126,7 @@
 }
 
 .card-detail:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    /*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);*/
 }
 
 
