--- a/app/views/abstracts/show.html.erb
+++ b/app/views/abstracts/show.html.erb
@@ -141,6 +141,7 @@
                         <option>Sustainability and Development</option>
                         <option>Sustainable Businesses</option>
                         <option>Sustainable Cities</option>
+                        <option>Others</option>
                       </select>
                     </div>
                   </div>
