--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,7 +136,7 @@
               </div>
               <nav class="w-dropdown-list">
                 <%= link_to "Colloquium Details", details_path, :class => "dropdown-links w-dropdown-link" %>
-                <!-- <a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a> -->
+                <a href="/schedule" class="dropdown-links w-dropdown-link">Schedule</a>
                 <a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
                 <%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
