--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -30,12 +30,12 @@
       <h6 class="heading-2" style="font-family: 'Roboto Condensed', sans-serif;">
     	The full day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
     	 their research to other students and experts in the field. This will be held on 
-    	     December 12th, 2018. 
+    	    <b> December 12th, 2018.  </b>
     	</h6>
     </div>
     <div class="row-3" style="margin-top: 20px;">
       <div class="column-6 w-col w-col-6">
-         <div class="card-track" style="padding: 10px;">
+         <div class="card-details" style="padding: 10px;">
           <div class="row-12 w-row">
           
       <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif; text-transform: uppercase;">PhD colloquium for doctoral candidates</h4>
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="card-track" style="padding: 10px; height: 243px;">
+        <div class="card-details" style="padding: 10px; height: 243px;">
           <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;">FUNDING</h4>
         We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
         </div>
@@ -64,87 +64,5 @@
 
 
 
-<div class="row-3" style="margin-bottom: 50px;">
-  <div class="jquery-script-ads">
-    <script type="text/javascript"><!--
-    google_ad_client = "ca-pub-2783044520727903";
-    /* jQuery_demo */
-    google_ad_slot = "2780937993";
-    google_ad_width = 728;
-    google_ad_height = 90;
-    
-    //-->
-    </script>
-  
-  </div>
-  <div class="jquery-script-clear"></div>
-<h4 class="heading-8" style="margin-top:100px; text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> COLLOQIUM PROGRAMME SCHEDULE : </p></h4>
-<div class="card-new" style="    box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2) !important; padding: 10px;">
-<main>
-      <section class="page-section">
-      <div class="container">
-      <div class="timeline">
-      <div class="timeline__wrap">
-      <div class="timeline__items">
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>09:30 - 10:30 a.m.</h2>
-      <p>REGISTRATION</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>10:30 a.m - 12:15 pm</h2>
-      <p>
-      <li> Key note speech by Dr. Ambika Zutshi, Deaken University, Melbourne </li>
-      <li> Panel discussion on 'Revisiting research agenda for Sustainability: Options and Futures' </li></p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>12:30 - 1:00 pm</h2>
-      <p> POSTER PRESENTATION SESSION</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>2:00 - 4:00 pm</h2>
-      <p>PAPER PRESENTATIONS</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>4:15 - 4:45 pm</h2>
-      <p>Valedictory session</p>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      </section>
-</main>
-</div>
-  
-  <script>
-    
-  timeline(document.querySelectorAll('.timeline'), {
-  forceVerticalMode: 700,
-  mode: 'horizontal',
-  verticalStartPosition: 'left',
-  visibleItems: 3
-  }); 
-  </script>
-  <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36251023-1']);
-  _gaq.push(['_setDomainName', 'jqueryscript.net']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-  </script>
-</div>
+
 </div>
