--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -92,9 +92,9 @@
             <div id="list3">
               <ul>
             <li>
-              <a href="">Innovating on Pedagogy and Curriculum</a>
+              <a href="/trackdetails#7">Innovating on Pedagogy and Curriculum</a>
             </li>
-            <li><a href="">Management Education for Future</a></li>
+            <li><a href="/trackdetails#12">Management Education for Future</a></li>
             <li><a href="">Re-thinking CSR</a></li>
             <li><a href="/trackdetails#9">Social Entrepreneurship</a> </li>
             <li><a href="">Social Impact Investing </a></li>
