--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -211,7 +211,38 @@
         </div>
       </div>
 </div>
+<div id="7" style="height: 800px; margin-top: 00px;">
+      <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 22px; text-transform: uppercase;"><u>Innovating on Pedagogy and Curriculum</u><br></h4>
+              
+              <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> TRACK CHAIRS : </p>
+        </h4>
+              <div class="card-detail">
+                <img src="../ProfAnilKulkarni.jpg" alt="Avatar" style="width:100%; height: 227px">
+                <div class="container">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Anil Kulkarni</h4>
+                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kulkarni@spjimr.org)</p>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Adjunct Professor</h5>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">SPJIMR</h5>
+              
+                </div>
+                <div class="column- w-col w-col-4" style="padding: 100px 40px 0px 40px; position: absolute; top: 20%; left: 50%">
+              
+                
+                <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+</div>
+              </div>
 
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
 <div id="5" style="height: 800px; margin-top: 00px;">
       <div class="column-12 w-col w-col-12">
         <div class="card-new">
@@ -280,6 +311,38 @@ Chairperson - Centre for Disasters and Development, Jamsetji Tata School of Disa
       </div>
 </div>
 
+<div id="12" style="height: 800px; margin-top: 00px;">
+      <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 22px; text-transform: uppercase;"><u>Management Education for the Future</u><br></h4>
+              
+              <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> TRACK CHAIRS : </p>
+        </h4>
+              <div class="card-detail">
+                <img src="../DrAnshulVerma.jpg" alt="Avatar" style="width:100%; height: 227px">
+                <div class="container">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Anshul Verma</h4>
+                  <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(anshul.verma@spjimr.org)</p>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor (Finance)</h5>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">SPJIMR</h5>
+              
+                </div>
+                <div class="column- w-col w-col-4" style="padding: 100px 40px 0px 40px; position: absolute; top: 20%; left: 50%">
+              
+                
+                <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+</div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
 
 
 <div id="9" style="height: 800px; margin-top: 00px;">
