--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <script src="../webflow.js" type="text/javascript"></script>
   <script type="text/javascript" src="../timeline.min.js"></script>
   <%= yield :styles %>
-  <%= yield :scripts %>
+  <%= yield :script %>
   </head>
 
 
